--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ImagePreviewer">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.view.activities.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
