--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,13 @@ android {
 dependencies {
 
     def lifecycle_version = "2.3.1"
+    def version = "3.3.6"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+    implementation "com.github.CanHub:Android-Image-Cropper:${version}"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -51,4 +54,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+
 }
